sculpt show brush toggle no longer working #45002

Closed
opened 2015-06-08 21:48:26 +02:00 by ratty redemption · 5 comments
- Operating System, Graphics card ---

cpu: intel core i3 2350 2.3 ghz
ram: 4 gb
gfx: intel hd graphics 3000
os: windows 7 home premium sp 1

- Blender version with error, and version that worked ---

error found in: 2.74 99fba34 win64.
was working in: 2.74 stable win64.

- Short description of error ---

sculpt show brush toggle no longer working

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

affects factory settings and all of my blend files.

- Operating System, Graphics card --- cpu: intel core i3 2350 2.3 ghz ram: 4 gb gfx: intel hd graphics 3000 os: windows 7 home premium sp 1 - Blender version with error, and version that worked --- error found in: 2.74 99fba34 win64. was working in: 2.74 stable win64. - Short description of error --- sculpt show brush toggle no longer working - Steps for others to reproduce the error (preferably based on attached .blend file) --- affects factory settings and all of my blend files.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @rattyredemption

Added subscriber: @rattyredemption
Bastien Montagne self-assigned this 2015-06-09 15:12:31 +02:00

This issue was referenced by 9a83e112be

This issue was referenced by 9a83e112bea30dfe8f3417df2638d674e84fa7f9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@mont29 thanks very much for the quick fix.

@mont29 thanks very much for the quick fix.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45002
No description provided.