Fix T45002: sculpt show brush toggle no longer working.